<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.EnterCodeFragment">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:contentDescription="@string/cd_register_image"
        android:src="@drawable/ic_register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />


    <TextView
        android:id="@+id/register_text_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_text_enter"
        android:textSize="@dimen/normal_Text"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="@dimen/vertical_margin"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/register_text_we_sent"
        style="@style/smallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin"
        android:gravity="center"
        android:text="@string/sms_text"
        android:textColor="#757575"
        app:layout_constraintTop_toBottomOf="@+id/register_text_enter"
        tools:layout_editor_absoluteX="10dp" />

    <EditText
        android:id="@+id/register_input_code_number"
        android:layout_width="wrap_content"
        style="@style/editText"
        android:gravity="center"
        android:textColorHint="@color/colorGrey"
        android:hint="@string/register_hint_code"
        android:minHeight="48dp"
        android:maxLength="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text_we_sent"
        tools:ignore="SpeakableTextPresentCheck" />








</androidx.constraintlayout.widget.ConstraintLayout>